Fix image stretching on propagation.html

--- a/resources/css/plog.css
+++ b/resources/css/plog.css
@@ -266,6 +266,7 @@ nav li a {
 
 .about img {
   max-width: 40vw;
+  object-fit: contain;
   padding: 2rem;
 }
 
